# private-decentralized-lottery

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DOCKER.md  Dockerfile.backend  Dockerfile.frontend  README.md  abi.json  docker-compose.yml
.cargo/: config.toml
.github/workflows/: deploy-docs.yml
benches/: add.rs  centralized.rs  verify.rs
contracts/: VRF_Requester.sol
docs/: README.md  next.config.mjs  package-lock.json  package.json
docs/app/: layout.jsx  page.jsx
docs/app/about/: page.jsx
docs/app/api/: page.jsx
docs/app/contact/: page.jsx
docs/app/features/: page.jsx
docs/app/how-it-works/: page.jsx
docs/app/installation/: page.jsx
docs/components/: footer.jsx  nav.jsx
docs/components/ui/: separator.jsx
frontend/: package.json
frontend/app/: page.jsx
src/: lib.rs  main.rs
