[package]
name = "private-decentralized-lottery"
version = "0.1.0"
edition = "2021"

[dependencies]
accumulator = { path = "accumulator" }
actix-web = "4.0"
tera = "1.17" # For templating
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
ethers = "2.0.14"
serde_json = "1.0.117"
actix-cors = "0.7.0"
